--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
   "author": "Saul E. Garza",
   "license": "MIT",
   "dependencies": {
+    "cookie-parser": "~1.4.3",
+    "debug": "~2.2.0",
+    "morgan": "~1.7.0",
+    "serve-favicon": "~2.3.0",
     "body-parser": "^1.15.2",
     "express": "^4.14.0",
     "jsonwebtoken": "^7.1.9",
